# physync

./: Cargo.toml
src/: client.rs  errors.rs  features.rs  lib.rs  main.rs  net.rs  packet.rs  server.rs
src/cli/: cli.yml
src/features/: connectivity.rs  throughput.rs
src/net/: connection.rs  connection_manager.rs  constants.rs  peer.rs  socket.rs
src/packet/: enums.rs  header.rs  outgoing.rs  packet_reader.rs  packet_struct.rs
src/packet/header/: base_header.rs  session_header.rs
tests/: basic_test.rs
